--- a/refs.bib
+++ b/refs.bib
@@ -14,6 +14,14 @@
   year = {2023}
 }
 
+@software{QRFuzz-2,
+  author={Lazari, Alberto and Scandaletti, Elia and Protopapa, Francesco},
+  title = {{QRFuzz-2}},
+  url = {https://github.com/albertolazari/qrfuzz},
+  year = {2024}
+}
+
+
 @software{v4l2loopback,
   title = {{v4l2loopback}},
   url = {https://github.com/umlaeute/v4l2loopback}
